--- a/src/views/courses/edit.hbs
+++ b/src/views/courses/edit.hbs
@@ -2,26 +2,94 @@
 <html lang="en">
 {{> head}}
 <body>
-    <div class="container">
-        <div class="mt-4">
-            <h3>Update Course</h3>
-        </div>
-        <form class="mt-4" method="POST", action="/courses/update/?id={{data._id}}">
-            <div class="form-group">
+    {{> staffLayout}}
+    <main class="content-detail" id="common_content-area">
+        <a href="/courses" type="button" class="btn btn-link fs-5">
+            <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
+        </a>
+        <form class="row g-3 mt-4" method="POST" action="/courses/update/?id={{data._id}}">
+            <div class="col-md-6">
+                    <label for="codeCourse">Code</label>
+                    <input type="text" value="{{data.code}}" class="form-control" id="codeCourse" name="code" placeholder="Code of Course..." required>
+                </div>
+                <div class="col-md-6">
+                    <label for="couseName">Course Name</label>
+                    <input type="text" value="{{data.name}}" class="form-control" id="name" name="name" placeholder="Course Name..." required>
+                </div>
+                {{!-- <div class="col-md-4">
+                <label for="categoryname" class="form-label">Category Name</label>
+                <select name="name" id="categoryname" class="form-select">
+                    <option value="{{name}}">IT</option>
+                    <option value="{{name}}">Business</option>
+                    <option value="{{name}}">Do Hoa</option>
+                </select>
+            </div> --}}
+                <div class="col-md-6">
+                    <label for="category">Category</label>
+                    <input type="text" value="{{data.category}}"class="form-control" id="category" name="category" placeholder="Category Name..." required>
+                </div>
+                <div class="col-md-6">
+                    <label for="session">Session</label>
+                    <input type="number" value="{{data.session}}" class="form-control" id="session" name="session" placeholder="Session of Course..." required>
+                </div>
+                <div class="col-6">
+                    <label for="update">UpdateAt</label>
+                    <input type="date"  value="{{data.updateAt}}" class="form-control" id="update" name="updateAt" placeholder="Update At..." required>
+                </div>
+                <div class="col-6">
+                    <label for="create">CreateAt</label>
+                    <input type="date" value="{{data.createAt}}" class="form-control" id="create" name="createAt" placeholder=" CreateAt..." required>
+                </div>
+                <div class="col-md-6">
+                    <label for="courseDescription">Course Description</label>
+                    <textarea class="form-control" id="courseDescription" name="description" placeholder="Course Description..." required>{{data.description}}</textarea>
+                </div>
+
+            {{!-- Test--}}
+            {{!-- <div class="col-md-6">
                 <label for="coursecategory">Course Category</label>
                 <input type="text" class="form-control" value="{{data.coursecategory}}" id="coursecategory" name="coursecategory">
             </div>
-            <div class="form-group">
-                <label for="name">Course Name</label>
-                <input type="text" class="form-control" value="{{data.name}}" id="name" name="name">
+            <div class="col-md-6">
+                    <label for="name">Course Name</label>
+                    <input type="text" class="form-control" value="{{data.name}}" id="name" name="name">
             </div>
-            <div class="form-group">
-                <label for="description">Course Description</label>
-                <textarea class="form-control" id="description" name="description">{{data.description}}</textarea>
+            <div class="mb-3">
+                    <label for="description">Course Description</label>
+                    <textarea class="form-control" id="description" name="description">{{data.description}}</textarea>
+            </div> --}}
+
+            {{!-- <div class="col-12">
+                <label for="inputAddress" class="form-label">Address</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
             </div>
-            <button type="submit" class="btn btn-primary">Update</button>
+            <div class="col-12">
+                <label for="inputAddress2" class="form-label">Address 2</label>
+                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+            </div>
+            <div class="col-md-6">
+                <label for="inputCity" class="form-label">City</label>
+                <input type="text" class="form-control" id="inputCity">
+            </div>
+            <div class="col-md-4">
+                <label for="inputState" class="form-label">State</label>
+                <select name="" id="inputState" class="form-select">
+                    <option value="{{id}}">IT</option>
+                    <option value="{{id}}">Business</option>
+                    <option value="{{id}}">ABC</option>
+                </select> --}}
+            {{!-- </div> --}}
+            {{!-- <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div> --}}
+            <div class="col-12 mt-5" style= "text-align: center">
+                <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
+                    <i class="bi bi-check2 fs-5"></i>
+                </button>
+            </div>
         </form>
-    </div>
+    </main>
 {{> bottom}}
 </body>
 </html>
