--- a/src/views/partials/staffLayout.hbs
+++ b/src/views/partials/staffLayout.hbs
@@ -25,7 +25,7 @@
         <a href="/staff"><i class="fas fa-user-circle"></i>Home</a>
         <a href="/categories"><i class="bi bi-stack"></i>Categories Course</a>
         <a href="/courses"><i class="bi bi-book"></i>Course</a>
-        <a href="#"><i class="fa fa-file-o"></i>Your Profile</a>
+        <a href="/staff/profile"><i class="fa fa-file-o"></i>Your Profile</a>
         <a href="#"><i class="fa fa-phone"></i>Logout</a>
     </div>
 </aside>
