--- a/src/views/partials/trainerLayout.hbs
+++ b/src/views/partials/trainerLayout.hbs
@@ -5,7 +5,7 @@
     </div>
     <div class="common_interface_header_r-area">
         <div class="header_r-area-info">
-            <img src="" alt="">
+            <img src="https://scontent.fhan14-2.fna.fbcdn.net/v/t1.6435-9/70482426_1190461581155908_3924557999154135040_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=174925&_nc_ohc=jXkmOROlTuMAX9zy5-B&_nc_ht=scontent.fhan14-2.fna&oh=2a9bc3508d164c3ee2866dc2e6104ed0&oe=61CB7B2F" alt="">
             <label for="info-checkbox">Do Cong Thanh
                 <span class="fas fa-caret-down"></span>
             </label>
@@ -24,7 +24,6 @@
         <h2>Menu</h2>
         <a href="/trainer"><i class="fas fa-user-circle"></i>Home</a>
         <a href="#"><i class="fa fa-book"></i>Trainer Course</a>
-        <a href="#"><i class="fa fa-file-o"></i>Your Profile</a>
         <a href="#"><i class="fa fa-phone"></i>Logout</a>
     </div>
 </aside>
