--- a/src/views/partials/traineeLayout.hbs
+++ b/src/views/partials/traineeLayout.hbs
@@ -5,8 +5,8 @@
     </div>
     <div class="common_interface_header_r-area">
         <div class="header_r-area-info">
-            {{!-- <img src="" alt=""> --}}
-            <label for="info-checkbox">@fpt.edu.vn
+            <img src="/images/trainee/ava.jpg" alt="">
+            <label for="info-checkbox">Khanh Tran
                 <span class="fas fa-caret-down"></span>
             </label>
             <input type="checkbox" name="" id="info-checkbox">
@@ -23,9 +23,9 @@
     <div class="l_sidebar-main_menu">
         <h2>Menu</h2>
         <a href="/trainee"><i class="bi bi-house-door"></i></i>Home</a>
-        <a href="/demo"><i class="bi bi-briefcase"></i>My courses</a>
-        <a href="/demo"><i class="bi bi-briefcase"></i>Curiculum</a>
-        <a href="#"><i class="fa fa-file-o"></i>Your Profile</a>
+        <a href="/seeall"><i class="bi bi-briefcase"></i>My courses</a>
+        <a href="/seeall"><i class="bi bi-briefcase"></i>Curiculum</a>
+        <a href="/trainee/profile"><i class="fa fa-file-o"></i>Your Profile</a>
         <a href="#"><i class="bi bi-box-arrow-right"></i></i>Logout</a>
     </div>
 </aside>
