edit image handler, admin pages

--- a/src/views/admin/admin-accounts.hbs
+++ b/src/views/admin/admin-accounts.hbs
@@ -19,37 +19,46 @@
             <thead class="table-light">
                 <tr style="font-size: 18px; text-align: center;">
                     <th scope="col">#</th>
-                    <th scope="col">Image</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Age</th>
-                    <th scope="col">Date of birth</th>
+                    <th scope="col" style="width: 190px;">Avatar</th>
+                    <th scope="col" style="width: 150px;">Email</th>
+                    <th scope="col">Full name</th>
+                    <th scope="col" style="width: 80px;">Age</th>
+                    <th scope="col" style="width: 130px;">Date of birth</th>
                     <th scope="col">Address</th>
-                    <th scope="col"><i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Action</span></th>
+                    <th scope="col" style="width: 220px;">
+                        <i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Action</span>
+                    </th>
                 </tr>
             </thead>
             <tbody>
                 {{#each admins}}
                 <tr>
-                    <th scope="row">{{@index}}</th>
-                    <th scope="col">
-                        <img style="width: 200px; height: 200px;" src="data:image/{{this.image.contentType}};base64,{{convertImage this.image.data}}" alt="">
-                    </th>
-                    <th scope="col">{{this.email}}</th>
-                    <th scope="col">{{this.name}}</th>
-                    <th scope="col">{{this.age}}</th>
-                    <th scope="col">{{this.dob}}</th>       
-                    <th scope="col">{{this.address}}</th>
+                    <th scope="row" style="text-align: center;">{{@index}}</th>
+                    <td scope="col">
+                        <div class="text-center">
+                            <img style="width: 170px; height: 170px;" src="data:image/{{this.image.contentType}};base64,{{convertImage this.image.data}}" alt="" class="img-thumbnail">
+                        </div>
+                    </td>
+                    <td scope="col">{{this.email}}</td>
+                    <td scope="col" style="text-align: center;">{{this.name}}</td>
+                    <td scope="col" style="text-align: center;">{{this.age}}</td>
+                    <td scope="col" style="text-align: center;">{{this.dob}}</td>       
+                    <td scope="col">{{this.address}}</td>
                     <td style="text-align: center;">
-                        <div class="btn-group" style="z-index: 0; height: 40px;" role="group" aria-label="Basic mixed styles example">
-                            <a href="/admin/accounts/edit?id={{this._id}}" class="btn btn-success js-edit-info" style="border-bottom-right-radius: unset; border-top-right-radius: unset;">
-                                <i class="bi bi-pencil-square"></i><span class=" fs-6" style="margin-left: 5px;">Edit</span>
-                            </a>
-                            <a href="/admin/admin-accounts/delete?id={{this._id}}" class="btn btn-danger" style="border-radius: unset;">
-                                <i class="bi bi-x-lg"></i><span class=" fs-6" style="margin-left: 5px;">Delete</span>
-                            </a>
-                            <a href="/admin/admin-accounts/delete?id={{this._id}}" class="btn btn-warning" style="border-bottom-left-radius: unset; border-top-left-radius: unset;">
-                                <i class="bi bi-gear"></i><span class=" fs-6" style="margin-left: 5px;">Set default password</span>
+                        <div>
+                            <div class="btn-group" style="z-index: 0; height: 40px; width: 199px;" role="group" aria-label="Basic mixed styles example">
+                                <a href="/admin/admin-accounts/edit?id={{this._id}}" class="btn btn-success js-edit-info" style="border-bottom-left-radius: unset;">
+                                    <i class="bi bi-pencil-square"></i>
+                                    <span class=" fs-6" style="margin-left: 5px;">Edit</span>
+                                </a>
+                                <a href="/admin/admin-accounts/delete?id={{this._id}}" class="btn btn-danger" style="border-bottom-right-radius: unset;">
+                                    <i class="bi bi-x-lg"></i>
+                                    <span class=" fs-6" style="margin-left: 5px;">Delete</span>
+                                </a>
+                            </div>
+                            <a href="/admin/admin-accounts/delete?id={{this._id}}" class="btn btn-warning" style="height: 40px; border-top-left-radius: unset; border-top-right-radius: unset;">
+                                <i class="bi bi-gear"></i>
+                                <span class=" fs-6" style="margin-left: 5px;">Set default password</span>
                             </a>
                         </div>
                     </td>
