--- a/src/views/admin/edit.hbs
+++ b/src/views/admin/edit.hbs
@@ -5,34 +5,34 @@
     {{> adminLayout}}
 
     <main class="content-detail" id="common_content-area">
-        <a href="/admin/create" type="button" class="btn btn-link fs-5">
+        <a href="/admin/admin-accounts" type="button" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <form class="row g-3 mt-4" method="POST" action="">
+        <form class="row g-3 mt-4" method="POST" enctype="multipart/form-data" action="/admin/admin-accounts/update?id={{admin._id}}">
             <div class="text-left">
-                <img style="width: 200px; height: 200px; margin-right: 20px;" src="/images/admin/background_image1.jpg" class="img-thumbnail" alt="">
+                <img style="width: 170px; height: 170px; margin-right: 20px;" src="data:image/{{admin.image.contentType}};base64,{{convertImage admin.image.data}}" alt="" class="img-thumbnail">
                 <div class="chosen_image-container">
-                    <img style="width: 200px; height: 200px;" src="" class="img-thumbnail" id="chosenImage" alt="">
+                    <img style="width: 170px; height: 170px;" src="" class="img-thumbnail" id="chosenImage" alt="">
                     <i id="cancel-btn" class="bi bi-x-lg"></i>
                 </div>
             </div>
             <div class="input-group mt-4 mb-3">
                 <label class="input-group-text" for="btn-upload-img">Upload</label>
-                <input type="file" class="form-control" id="btn-upload-img" accept="">
-            </div>
-            <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Email</label>
-                <input type="email" class="form-control" id="inputEmail4" value="@fpt.edu.vn">
-            </div>
-            <div class="col-md-6">
-                <label for="inputPassword4" class="form-label">Password</label>
-                <input type="password" class="form-control" id="inputPassword4">
+                <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*">
             </div>
             <div class="col-12">
-                <label for="inputAddress" class="form-label">Address</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email" value="{{admin.email}}">
             </div>
             <div class="col-12">
+                <label for="fullName" class="form-label">Full name</label>
+                <input type="text" class="form-control" id="fullName" name="name" value="{{admin.name}}">
+            </div>
+            <div class="col-12">
+                <label for="dob" class="form-label">Date of birth</label>
+                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate admin.dob}}">
+            </div>
+            {{!-- <div class="col-12">
                 <label for="inputAddress2" class="form-label">Address 2</label>
                 <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
             </div>
@@ -47,10 +47,10 @@
                     <option value="{{id}}">Business</option>
                     <option value="{{id}}">ABC</option>
                 </select>
-            </div>
+            </div> --}}
             <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <label for="address" class="form-label">Address</label>
+                <textarea class="form-control" id="address" rows="3" name="address">{{admin.address}}</textarea>
             </div>
             <div class="col-12 mt-5">
                 <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
