--- a/src/views/seeall/index.hbs
+++ b/src/views/seeall/index.hbs
@@ -8,8 +8,8 @@
         <h3 class="fs-4 mt-5">Courses (~ 20 records)</h3>
         <div class="content-detail-header mt-4">
         <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Course</button>
-           <form action="" class="content-detail-header-search">
-                <input type="search" class="form-control" placeholder="Search by name..." aria-label="Recipient's username" aria-describedby="basic-addon2">
+           <form action="/seeall/search" class="content-detail-header-search" method="GET">
+                <input type="search" name="q" class="form-control" placeholder="Search by name..." aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <button style="width: 90px;" class="btn btn-primary" type="submit"><i class="bi bi-search"></i></button>
             </form>
         </div>
