--- a/src/views/admin/edit.hbs
+++ b/src/views/admin/edit.hbs
@@ -5,10 +5,10 @@
     {{> adminLayout}}
 
     <main class="content-detail" id="common_content-area">
-        <a href="/admin/admin-accounts" type="button" class="btn btn-link fs-5">
+        <a href="/admin/admin-accounts" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <form class="row g-3 mt-4" method="POST" enctype="multipart/form-data" action="/admin/admin-accounts/update?id={{admin._id}}">
+        <form class="row g-3 mt-4" method="POST" action="/admin/admin-accounts/update?id={{admin._id}}" enctype="multipart/form-data">
             <div class="text-left">
                 <img style="width: 170px; height: 170px; margin-right: 20px;" src="data:image/{{admin.image.contentType}};base64,{{convertImage admin.image.data}}" alt="" class="img-thumbnail">
                 <div class="chosen_image-container">
@@ -16,21 +16,21 @@
                     <i id="cancel-btn" class="bi bi-x-lg"></i>
                 </div>
             </div>
-            <div class="input-group mt-4 mb-3">
-                <label class="input-group-text" for="btn-upload-img">Upload</label>
-                <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*">
+            <div class="col-12 mt-4 mb-3">
+                <label class="input-group-text" style="cursor: pointer;" for="btn-upload-img">Upload</label>
             </div>
+
             <div class="col-12">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" value="{{admin.email}}">
+                <input type="email" class="form-control" id="email" name="email" value="{{admin.email}}" required>
             </div>
             <div class="col-12">
                 <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{admin.name}}">
+                <input type="text" class="form-control" id="fullName" name="name" value="{{admin.name}}" required>
             </div>
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
-                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate admin.dob}}">
+                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate admin.dob}}" required>
             </div>
             {{!-- <div class="col-12">
                 <label for="inputAddress2" class="form-label">Address 2</label>
@@ -50,8 +50,11 @@
             </div> --}}
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address">{{admin.address}}</textarea>
+                <textarea class="form-control" id="address" rows="3" name="address" required>{{admin.address}}</textarea>
             </div>
+            {{!-- <div class="input-group mt-4 mb-3"> --}}
+                <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
+            {{!-- </div> --}}
             <div class="col-12 mt-5">
                 <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
                     <i class="bi bi-check2 fs-5"></i>
