--- a/src/views/staff/edit.hbs
+++ b/src/views/staff/edit.hbs
@@ -2,39 +2,50 @@
 <html lang="en">
 {{> head}}
 <body>
-    <div class="container">
-        <div class="mt-5">
-            <h3>Add demo Anh</h3>
-        </div>
-        <form method="POST" action="/staff/store" class="mt-4" enctype="multipart/form-data"> 
-           <div>
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="" name="email"  placeholder="Email of Staff.." required>
+    {{> staffLayout}}
+
+    <main class="content-detail" id="common_content-area">
+        <a href="/staff/profile" class="btn btn-link fs-5">
+            <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
+        </a>
+        <form class="row g-3 mt-4" method="POST" action="/staff/update?id={{data._id}}" enctype="multipart/form-data">
+            <div class="text-left">
+                <img style="width: 170px; height: 170px; margin-right: 20px;" src="data:image/{{data.image.contentType}};base64,{{convertImage data.image.data}}" alt="" class="img-thumbnail">
+                <div class="chosen_image-container">
+                    <img style="width: 170px; height: 170px;" src="" class="img-thumbnail" id="chosenImage" alt="">
+                    <i id="cancel-btn" class="bi bi-x-lg"></i>
                 </div>
-                <div>
-                    <label for="namestaff">Name</label>
-                    <input type="text" class="form-control" id="" name="name"  placeholder="Name of Category..." required>
-                </div>
-                <div>
-                    <label for="age">Age</label>
-                    <input type="number" class="form-control" id="" name="age"  placeholder="Age..." required>
-                </div>
-                <div>
-                    <label for="dob">DOB</label>
-                    <input type="date" class="form-control" id="" name="dob"  placeholder="DOB..." required>
-                </div>
-                {{!-- <div>
-                    <label for="dob">Address</label>
-                    <input type="text" class="form-control" id="" name="address"  placeholder="Address..." required>
-                </div> --}}
-                <div>   
-            <div class="form-group">
-                <label for="image">Image</label>
-                <input type="file" class="form-control" id="image" name="image">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="col-12 mt-4 mb-3">
+                <label class="input-group-text" style="cursor: pointer;" for="btn-upload-img">Upload</label>
+            </div>
+
+         <div class="col-12">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email" value="{{data.email}}" required>
+            </div>
+            <div class="col-12">
+                <label for="fullName" class="form-label">Full name</label>
+                <input type="text" class="form-control" id="fullName" name="name" value="{{data.name}}" required>
+            </div>
+            <div class="col-12">
+                <label for="dob" class="form-label">Date of birth</label>
+                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate data.dob}}" required>
+            </div>
+            <div class="mb-3">
+                <label for="address" class="form-label">Address</label>
+                <textarea class="form-control" id="address" rows="3" name="address" required>{{data.address}}</textarea>
+            </div>
+            {{!-- <div class="input-group mt-4 mb-3"> --}}
+                <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
+            {{!-- </div> --}}
+            <div class="col-12 mt-5">
+                <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
+                    <i class="bi bi-check2 fs-5"></i>
+                </button>
+            </div>
         </form>
-    </div>
+    </main>
 {{> bottom}} 
 </body>
 </html>
