--- a/src/views/staff/profile.hbs
+++ b/src/views/staff/profile.hbs
@@ -14,39 +14,44 @@
             <thead class="table-light">
                 <tr style="font-size: 18px; text-align: center;">
                     <th scope="col">#</th>
-                    <th scope="col">Image</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Age</th>
-                    <th scope="col">DOB</th>
+                    <th scope="col" style="width: 190px";>Avata</th>
+                    <th scope="col" style="width: 150px;">Email</th>
+                    <th scope="col">Full Name</th>
+                    <th scope="col" style="width: 130px;">Date of birth</th>
                     <th scope="col">Address</th>
-                    <th scope="col"><i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Action</span></th>
+                    <th scope="col" style="width: 220px;">
+                        <i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Action</span>
+                    </th>
                 </tr>
             </thead>
             <tbody>
-                {{#each staffs}}
-                <tr style="font-size: 18px; text-align: center;">
-                    <th scope="row">{{@index}}</th>
-                    <th scope="col">
-                        <img src="{{this.image}}" alt="">
-                    </th>
-                    {{!-- <td>
-                        <img style="width: 200px; height: 200px;" src="data:image/{{this.image.contentType}};base64,{{convertImage this.image.data}}" alt="">
-                    </td> --}}
-                    <td>{{this.email}}</td>
-                    <td>{{this.name}}</td>
-                    <td>{{this.age}}</td>
-                    <td>{{this.dob}}</td>
-                    <td>{{this.address}}</td>
+                {{#each data}}
+                <th scope="row" style="text-align: center;">{{@index}}</th>
+                    <td scope="col">
+                        <div class="text-center">
+                            <img style="width: 170px; height: 170px;" src="data:image/{{this.image.contentType}};base64,{{convertImage this.image.data}}" alt="" class="img-thumbnail">
+                        </div>
+                    </td>
+                    <td scope="col">{{this.email}}</td>
+                    <td scope="col" style="text-align: center;">{{this.name}}</td>
+                    <td scope="col" style="text-align: center;">{{this.dob}}</td>
+                    <td scope="col">{{this.address}}</td>
                     <td>
                         <div class="btn-group" style="z-index: 0;" role="group" aria-label="Basic mixed styles example">
                             <button type="button" class="btn btn-success js-edit-info">
                                 <i class="bi bi-pencil-square"></i>
-                                <a class ="underline-white" href="/staff/edit">
-                                    <span class=" fs-6" style="margin-left: 18px;">Edit</span>
+                                <a class ="underline-white" href="/staff/edit?id={{this._id}}" class="btn btn-success js-edit-info" style="border-bottom-left-radius: unset;">
+                                    <span class=" fs-6" style="margin-left: auto;">Edit</span>
                                 </a>
                             </button>
-                        </div>
+                        <div class="btn-group" style="z-index: 0;" role="group" aria-label="Basic mixed styles example"> 
+                        <button type="button" class="btn btn-danger">
+                                <i class="bi bi-x-lg"></i>
+                                <a class ="underline-white" href="/staff/delete/?id={{this._id}}">
+                                    <span class=" fs-6" style="margin-left: auto;">Delete</span>
+                                </a>
+                            </button>
+                            </div>
                     </td>
                 </tr>
                 {{/each}}
@@ -67,27 +72,27 @@
             <form class="modal-action_form-body" method="POST" action="/staff/store" enctype="multipart/form-data">
                 <div>
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="" name="email"  placeholder="Email of Staff.." required>
+                    <input type="email" class="email" id="email" name="email"  placeholder="Your email..." required>
                 </div>
                 <div>
-                    <label for="namestaff">Name</label>
-                    <input type="text" class="form-control" id="" name="name"  placeholder="Name of Staff..." required>
+                    <label for="namestaff">Full Name</label>
+                    <input type="text" class="name" id="name" name="name"  placeholder="Your full name..." required>
                 </div>
                 <div>
-                    <label for="age">Age</label>
-                    <input type="number" class="form-control" id="" name="age"  placeholder="Age..." required>
-                </div>
-                <div>
-                    <label for="dob">DOB</label>
-                    <input type="date" class="form-control" id="" name="dob"  placeholder="DOB..." required>
+                    <label for="dob">Date of birth</label>
+                    <input type="date" class="dob" id="dob" name="dob"  placeholder="Your date of birth..." required>
                 </div>
                 <div>
                     <label for="address">Address</label>
-                    <input type="text" class="form-control" id="" name="address"  placeholder="Address..." required>
+                    <input type="text" class="address" id="address" name="address"  placeholder="Your address..." required>
                 </div>
-                <div>   
-                    <label for="avatar" class="">Avatar</label>
-                    <input type="file" name="image" id="avatar" accept="image/*">
+                <div>
+                    <label for="btn-add-img" class="form-label">Upload</label>
+                    <input class="form-control" type="file" id="btn-add-img" name="image" accept="image/*">
+                </div>
+                <div class="text-center">
+                    <label for="previewImage" class="form-label">Avatar</label>
+                    <img style="width: 200px; height: 200px;" id="previewImage" name="avatar" src="" class="img-thumbnail" alt="">
                 </div>
                 <button type="submit" class="btn-action">Add<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
             </form>
