update admin and staff accounts pages

--- a/src/views/admin/staff-accounts.hbs
+++ b/src/views/admin/staff-accounts.hbs
@@ -78,7 +78,7 @@
             <form class="modal-action_form-body" method="POST" action="/admin/staff-accounts/store" enctype="multipart/form-data">
                 <div>
                     <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your email..." required>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your email address..." required>
                 </div>
                 <div>
                     <label for="name" class="form-label">Full name</label>
