--- a/src/views/admin/admin-accounts.hbs
+++ b/src/views/admin/admin-accounts.hbs
@@ -79,7 +79,7 @@
             <form class="modal-action_form-body" method="POST" action="/admin/admin-accounts/store" enctype="multipart/form-data">
                 <div>
                     <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your email..." required>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your email address..." required>
                 </div>
                 <div>
                     <label for="name" class="form-label">Full name</label>
