--- a/src/views/admin/editAdmin.hbs
+++ b/src/views/admin/editAdmin.hbs
@@ -21,12 +21,12 @@
             </div>
 
             <div class="col-12">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" value="{{admin.email}}" required>
+                <label for="email" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="email" name="email" value="{{admin.email}}" required placeholder="Your email address...">
             </div>
             <div class="col-12">
                 <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{admin.name}}" required>
+                <input type="text" class="form-control" id="fullName" name="name" value="{{admin.name}}" required placeholder="Your full name...">
             </div>
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
@@ -50,7 +50,7 @@
             </div> --}}
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address" required>{{admin.address}}</textarea>
+                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address...">{{admin.address}}</textarea>
             </div>
             {{!-- <div class="input-group mt-4 mb-3"> --}}
                 <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
