--- a/src/views/admin/editStaff.hbs
+++ b/src/views/admin/editStaff.hbs
@@ -21,12 +21,12 @@
             </div>
 
             <div class="col-12">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" value="{{staff.email}}" required>
+                <label for="email" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="email" name="email" value="{{staff.email}}" required placeholder="Your email address...">
             </div>
             <div class="col-12">
                 <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{staff.name}}" required>
+                <input type="text" class="form-control" id="fullName" name="name" value="{{staff.name}}" required placeholder="Your full name...">
             </div>
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
@@ -34,7 +34,7 @@
             </div>
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address" required>{{staff.address}}</textarea>
+                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address...">{{staff.address}}</textarea>
             </div>
                 <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
             <div class="col-12 mt-5">
