--- a/src/views/partials/adminLayout.hbs
+++ b/src/views/partials/adminLayout.hbs
@@ -25,7 +25,7 @@
         <a href="/admin"><i class="fas fa-user-circle"></i>Home</a>
         <a href="/admin/admin-accounts"><i class="fa fa-users"></i>Admin Accounts</a>
         <a href="/admin/staff-accounts"><i class="fa fa-users"></i>Staff Accounts</a>
-        <a href="/admin/staff-accounts"><i class="fa fa-users"></i>Trainer Accounts</a>
+        <a href="/admin/trainer-accounts"><i class="fa fa-users"></i>Trainer Accounts</a>
         {{!-- <a href="/admin/trainer-accounts"><i class="fa fa-book"></i>Trainer Accounts</a> --}}
         <a href="#"><i class="fa fa-file-o"></i>Your Profile</a>
         <a href="#"><i class="fa fa-phone"></i>Logout</a>
