update view course

--- a/src/views/courses/index.hbs
+++ b/src/views/courses/index.hbs
@@ -52,6 +52,7 @@
                                     <span class=" fs-6" style="margin-left: auto;">Delete</span>
                                 </a>
                             </button>
+                        </div>
                     </td>
                 </tr>
                 {{/each}}
