--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,4 +1,5 @@
 /* Login page */
+
 .login-main {
     width: 100%;
     height: 800px;
@@ -114,6 +115,7 @@
     color: inherit;
 }
 
+
 /* common header */
 
 .common_interface-header {
@@ -158,7 +160,7 @@
 }
 
 .header_r-area-info img {
-    width: 56px; 
+    width: 56px;
     height: 56px;
     border-radius: 100px;
 }
@@ -185,7 +187,7 @@
     display: none;
 }
 
-#info-checkbox:checked + ul {
+#info-checkbox:checked+ul {
     display: block;
 }
 
@@ -200,7 +202,7 @@
     border-radius: 5px;
     display: none;
     user-select: none;
-    border: 1px solid rgba(0,0,0,0.08);
+    border: 1px solid rgba(0, 0, 0, 0.08);
 }
 
 .header_r-area-info ul::before {
@@ -223,7 +225,7 @@
 }
 
 .header_r-area-info ul li:not(:last-child) {
-    border-bottom: 1px solid rgba(0,0,0,0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .header_r-area-info ul li a {
@@ -237,6 +239,7 @@
     color: black;
     transition: 0.2s;
 }
+
 
 /*common left sidebar */
 
@@ -295,6 +298,7 @@
     margin-left: 50px;
 }
 
+
 /* common left sidebar toggle */
 
 .toggle_active1 {
@@ -305,7 +309,9 @@
     margin-left: 280px;
 }
 
+
 /* common interface image slider */
+
 .common_content-area {
     display: flex;
     justify-content: center;
@@ -314,17 +320,26 @@
     margin-top: 70px;
 }
 
+
 /* setup for common layouts */
+
+
 /* transtition */
+
 #common_content-area {
     transition: margin-left .5s;
 }
+
+
 /* background to view content */
+
 .content-detail {
     padding: 20px 50px;
     min-height: 100vh;
     margin-top: 70px;
 }
+
+
 /* ending block */
 
 .image-slider {
@@ -342,8 +357,8 @@
 }
 
 .slides input {
-    display: none; 
-} 
+    display: none;
+}
 
 .slide {
     width: 20%;
@@ -355,7 +370,9 @@
     height: 500px;
 }
 
+
 /* css for manual slide navigation */
+
 .navigation-manual {
     position: absolute;
     width: 800px;
@@ -380,23 +397,25 @@
     background-color: #40D3DC;
 }
 
-#radio1:checked ~ .first {
+#radio1:checked~.first {
     margin-left: 0;
 }
 
-#radio2:checked ~ .first {
+#radio2:checked~.first {
     margin-left: -20%;
 }
 
-#radio3:checked ~ .first {
+#radio3:checked~.first {
     margin-left: -40%;
 }
 
-#radio4:checked ~ .first {
+#radio4:checked~.first {
     margin-left: -60%;
-} 
+}
+
 
 /* css for automatic navigation */
+
 .navigation-auto {
     position: absolute;
     display: flex;
@@ -416,19 +435,19 @@
     margin-right: 40px;
 }
 
-#radio1:checked ~ .navigation-auto .auto-btn1 {
+#radio1:checked~.navigation-auto .auto-btn1 {
     background-color: #40D3DC;
 }
 
-#radio2:checked ~ .navigation-auto .auto-btn2 {
+#radio2:checked~.navigation-auto .auto-btn2 {
     background-color: #40D3DC;
 }
 
-#radio3:checked ~ .navigation-auto .auto-btn3 {
+#radio3:checked~.navigation-auto .auto-btn3 {
     background-color: #40D3DC;
 }
 
-#radio4:checked ~ .navigation-auto .auto-btn4 {
+#radio4:checked~.navigation-auto .auto-btn4 {
     background-color: #40D3DC;
 }
 
@@ -441,7 +460,7 @@
     right: 0;
     left: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
     align-items: center;
     justify-content: center;
     display: none;
@@ -556,10 +575,12 @@
     }
 }
 
+
 /* content detail - main - header */
+
 .content-detail-header {
-    display: flex; 
-    justify-content: space-between; 
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
 }
@@ -570,10 +591,14 @@
     align-items: center;
 }
 
+
 /* edit page */
+
+
 /* upload image */
+
 .chosen_image-container {
-    display: inline-block; 
+    display: inline-block;
     position: relative;
 }
 
@@ -593,4 +618,16 @@
 
 #cancel-btn:hover {
     color: #e74c3c;
+}
+
+
+/* action-button delete */
+
+.underline-white {
+    text-decoration: none;
+    color: white;
+}
+
+.underline-white:hover {
+    color: unset;
 }
