do trainee accounts management

--- a/src/views/admin/trainer-accounts.hbs
+++ b/src/views/admin/trainer-accounts.hbs
@@ -96,7 +96,7 @@
                 </div>
                 <div>   
                     <label for="specialty" class="">Specialty</label>
-                    <input type="text" class="form-control" name="specialty" id="specialty" required>
+                    <input type="text" class="form-control" name="specialty" id="specialty" required placeholder="Your specialty...">
                 </div>
                 <div>
                     <label for="btn-add-img" class="form-label">Upload</label>
