--- a/src/views/partials/staffLayout.hbs
+++ b/src/views/partials/staffLayout.hbs
@@ -23,6 +23,7 @@
     <div class="l_sidebar-main_menu">
         <h2>Menu</h2>
         <a href="/staff"><i class="fas fa-user-circle"></i>Home</a>
+        <a href="/staff/trainee-accounts"><i class="fa fa-users"></i>Trainee Accounts</a>
         <a href="/categories"><i class="bi bi-stack"></i>Categories Course</a>
         <a href="/courses"><i class="bi bi-book"></i>Course</a>
         <a href="/staff/profile"><i class="fa fa-file-o"></i>Your Profile</a>
