Update trainee view grade

--- a/src/views/partials/traineeLayout.hbs
+++ b/src/views/partials/traineeLayout.hbs
@@ -23,8 +23,9 @@
     <div class="l_sidebar-main_menu">
         <h2>Menu</h2>
         <a href="/trainee"><i class="bi bi-house-door"></i></i>Home</a>
-        <a href="/seeall"><i class="bi bi-briefcase"></i>My courses</a>
+        <a href="/trainee/courses"><i class="bi bi-book"></i></i>My courses</a>
         <a href="/seeall"><i class="bi bi-briefcase"></i>Curiculum</a>
+        <a href="/grade"><i class="bi bi-mortarboard"></i>My Grades</a>
         <a href="/trainee/profile"><i class="fa fa-file-o"></i>Your Profile</a>
         <a href="#"><i class="bi bi-box-arrow-right"></i></i>Logout</a>
     </div>
