view course trainer

--- a/src/views/coursetrainer/create.hbs
+++ b/src/views/coursetrainer/create.hbs
@@ -6,7 +6,7 @@
         <div class="mt-5">
             <h3>Add demo</h3>
         </div>
-        <form method="POST" action="/demo/store" class="mt-4" enctype="multipart/form-data"> 
+        <form method="POST" action="/coursetrainer/store" class="mt-4" enctype="multipart/form-data"> 
             <div class="form-group">
                 <label for="categoryName">Demo Name</label>
                 <input type="text" class="form-control" id="categoryName" name="name">
