--- a/src/views/partials/trainerLayout.hbs
+++ b/src/views/partials/trainerLayout.hbs
@@ -21,10 +21,11 @@
 <aside id="common_interface-l_sidebar" class="common_interface-l_sidebar">
     <a href="javascript:void(0)" class="l_sidebar-closebtn" onclick="toggle()">&times;</a>
     <div class="l_sidebar-main_menu">
-        <h2>Menu</h2>
-        <a href="/trainer"><i class="fas fa-user-circle"></i>Home</a>
-        <a href="#"><i class="fa fa-book"></i>Trainer Course</a>
-        <a href="#"><i class="fa fa-phone"></i>Logout</a>
+       <h2>Menu</h2>
+        <a href="/trainer"><i class="bi bi-house-door"></i></i>Home</a>
+        <a href="/coursetrainer"><i class="bi bi-briefcase"></i> View Courses</a>
+        <a href="/trainer/profile"><i class="fa fa-file-o"></i>Your Profile</a>
+        <a href="#"><i class="bi bi-box-arrow-right"></i></i>Logout</a>
     </div>
 </aside>
 
