--- a/src/views/courses/index.hbs
+++ b/src/views/courses/index.hbs
@@ -4,7 +4,7 @@
 <body>
     {{> staffLayout}}
     <main class="content-detail" id="">
-        <h3 class="fs-4 mt-5">Courses (~ 20 records)</h3>
+        <h3 class="fs-4 mt-5">Courses (~ {{total}} records)</h3>
         <div class="content-detail-header mt-4">
             <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Course</button>
             <form action="/courses/search" class="content-detail-header-search" method="GET">
@@ -91,10 +91,10 @@
                     <label for="courseDescription">Course Description</label>
                     <textarea class="form-control" id="courseDescription" name="description" placeholder="Course Description..." required></textarea>
                 </div>
-                <div class="form-group">
+                {{!-- <div class="form-group">
                     <label for="session">Session</label>
                     <input type="number" class="form-control" id="session" name="session" placeholder="Session of Course..." required>
-                </div>
+                </div> --}}
                 <div class="form-group">
                     <label for="create">CreateAt</label>
                     <input type="date" class="form-control" id="create" name="createAt" placeholder="Update At..." required>
@@ -102,6 +102,10 @@
                 <div class="form-group">
                     <label for="update">UpdateAt</label>
                     <input type="date" class="form-control" id="update" name="updateAt" placeholder="Update At..." required>
+                </div>
+                  <div class="form-group">
+                    <label for="session">Session</label>
+                    <input type="number" class="form-control" id="session" name="session" placeholder="Session of Course..." required>
                 </div>
                 <button type="submit" class="btn-action">Add<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
             </form>
