--- a/src/views/partials/staffLayout.hbs
+++ b/src/views/partials/staffLayout.hbs
@@ -5,7 +5,7 @@
     </div>
     <div class="common_interface_header_r-area">
         <div class="header_r-area-info">
-        <img src="/images/ava/avastaff.jpg" alt="">
+        <img src="/images/avatar/avastaff.png" alt="">
             <label for="info-checkbox">Vu Hoang Son
                 <span class="fas fa-caret-down"></span>
             </label>
