--- a/src/views/staff/edit.hbs
+++ b/src/views/staff/edit.hbs
@@ -20,25 +20,23 @@
                 <label class="input-group-text" style="cursor: pointer;" for="btn-upload-img">Upload</label>
             </div>
 
-         <div class="col-12">
+        <div class="col-12">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" value="{{data.email}}" required>
+                <input type="email" class="form-control" id="email" name="email" value="{{data.email}}" required placeholder="Your email address...">
             </div>
             <div class="col-12">
                 <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{data.name}}" required>
+                <input type="text" class="form-control" id="fullName" name="name" value="{{data.name}}" required placeholder="Your full name...">
             </div>
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
-                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate data.dob}}" required>
+                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate data.dob}}" required >
             </div>
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address" required>{{data.address}}</textarea>
+                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address...">{{data.address}}</textarea>
             </div>
-            {{!-- <div class="input-group mt-4 mb-3"> --}}
                 <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
-            {{!-- </div> --}}
             <div class="col-12 mt-5">
                 <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
                     <i class="bi bi-check2 fs-5"></i>
