--- a/src/views/staff/profile.hbs
+++ b/src/views/staff/profile.hbs
@@ -5,7 +5,7 @@
     {{> staffLayout}}
     
     <main class="content-detail" id="">
-        <h3 class="fs-4 mt-5">Test Account (~ 20 records)</h3>
+        <h3 class="fs-4 mt-5">Test Account (~ {{total}} records)</h3>
         <div class="content-detail-header mt-4">
             <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Account</button>
         </div>
@@ -17,6 +17,7 @@
                     <th scope="col" style="width: 190px";>Avata</th>
                     <th scope="col" style="width: 150px;">Email</th>
                     <th scope="col">Full Name</th>
+                    <th scope="col" style="width: 80px;">Age</th>
                     <th scope="col" style="width: 130px;">Date of birth</th>
                     <th scope="col">Address</th>
                     <th scope="col" style="width: 220px;">
@@ -34,6 +35,7 @@
                     </td>
                     <td scope="col">{{this.email}}</td>
                     <td scope="col" style="text-align: center;">{{this.name}}</td>
+                    <td scope="col" style="text-align: center;">{{calculateAge this.dob}}</td>
                     <td scope="col" style="text-align: center;">{{this.dob}}</td>
                     <td scope="col">{{this.address}}</td>
                     <td>
@@ -72,19 +74,19 @@
             <form class="modal-action_form-body" method="POST" action="/staff/store" enctype="multipart/form-data">
                 <div>
                     <label for="email">Email</label>
-                    <input type="email" class="email" id="email" name="email"  placeholder="Your email..." required>
+                    <input type="email" class="form-control" id="email" name="email"  placeholder="Your email..." required>
                 </div>
                 <div>
                     <label for="namestaff">Full Name</label>
-                    <input type="text" class="name" id="name" name="name"  placeholder="Your full name..." required>
-                </div>
-                <div>
-                    <label for="dob">Date of birth</label>
-                    <input type="date" class="dob" id="dob" name="dob"  placeholder="Your date of birth..." required>
+                    <input type="text" class="form-control" id="name" name="name"  placeholder="Your full name..." required>
                 </div>
                 <div>
                     <label for="address">Address</label>
-                    <input type="text" class="address" id="address" name="address"  placeholder="Your address..." required>
+                    <textarea  type="text" class="form-control" id="address" name="address" placeholder="Your address..." required></textarea>
+                </div>
+                <div>
+                    <label for="dob">Date of birth</label>
+                    <input type="date" class="form-control" id="dob" name="dob" required>
                 </div>
                 <div>
                     <label for="btn-add-img" class="form-label">Upload</label>
