fix login and update change password

--- a/src/views/site/changePassword.hbs
+++ b/src/views/site/changePassword.hbs
@@ -2,24 +2,28 @@
 <html lang="en">
 {{> head}}
 <body>
-    <a href="/{{removeSpace user.name}}" class="btn btn-link fs-5">
+    <div class="container">
+        <a href="/{{removeSpace user.name}}" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
-    </a>
-
-    <form action="/{{removeSpace user.name}}/store_password" method="POST">
-        <div class="mb-3">
-            <label for="oldPassword" class="form-label">Password</label>
-            <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Your old password..." required>
-        </div>
-        <div class="mb-3">
-            <label for="newPassword" class="form-label">New Password</label>
-            <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="Your new password..." required>
-        </div>
-        <div class="mb-3">
-            <label for="confirmPassword" class="form-label">Confirm Password</label>
-            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Your new password..." required>
-        </div>
-        <button type="submit" class="btn btn-primary">Change</button>
-    </form>
+        </a>
+        <form action="/{{removeSpace user.name}}/store_password" method="POST">
+            <div class="mb-3">
+                <label for="currentP" class="form-label">Current Password</label>
+                <input type="password" class="form-control" id="currentP" name="currentP" placeholder="Your current password..." required>
+                <span>{{msg2}}</span>
+            </div>
+            <div class="mb-3">
+                <label for="newP" class="form-label">New Password</label>
+                <input type="password" class="form-control" id="newP" name="newP" placeholder="Your new password..." required minlength="6">
+                <span>{{msg}}</span>
+            </div>
+            <div class="mb-3">
+                <label for="confirmNP" class="form-label">Confirm New Password</label>
+                <input type="password" class="form-control" id="confirmNP" name="confirmNP" placeholder="Confirm your new password..." required minlength="6">
+                <span>{{msg}}</span>
+            </div>
+            <button type="submit" class="btn btn-primary">Change</button>
+        </form>
+    </div>
 </body>
 </html>
